Fixed javafx:run error
Missing configuration

Issues: 40